--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,22 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            padding: 20px;
+            border-radius: 15px;
+            background-color: #f1f1f1;
+            text-align: center;
+            backdrop-filter: blur(5px);
+            box-shadow:  0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        .warning {
-            color: red;
+        h1 {
+            color: #333;
+        }
+        #status {
+            margin-top: 20px;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
